feat: base UI + first test of timer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Use dark icon when hamburger menu is open */
+.open-hamburger-menu clr-icon.is-inverse {
+  fill: #565656;
+}
