--- a/src/app/timers/containers/collection/collection-page.component.html
+++ b/src/app/timers/containers/collection/collection-page.component.html
@@ -1,20 +1,32 @@
 <div class="row">
   <div class="col-md-2" *ngFor="let timer of timers$ | async">
-    <app-timer [timer]="timer"></app-timer>
+    <app-timer [timer]="timer" (remove)="removeTimer($event)"></app-timer>
   </div>
 </div>
 
 <button class="btn" (click)="onAddTimer()">New Timer</button>
 
+<button class="btn" routerLink="/timers/edit">New Timer (form)</button>
+
 <hr />
 
 <h2>Todo</h2>
 <ul>
-  <li>En fait, le state "collection" est un sous ensemble de toutes les entités chargées. Dans l'exemple ngRx "books" contenait
+  <li>Retirer le store "collection", c'est un sous ensemble de toutes les entités chargées. Dans l'exemple ngRx "books" contenait
     à la fois des résultats de recherche et les livres ajoutés à la colleciton. Mais pour nous, il n'y a que "timers". On
     peut donc supprimer collection.</li>
+  <li>Finir edit :
+    <ul>
+      <li>
+        le composant "edit" doit etre un dumb component, juste en charge d'afficher le form
+      </li>
+      <li>Il faut créer une page équivalente à selected-book-page de l'exemple. C'est cette page qui apelle le form</li>
+      <li>Il faut renommer edit-page, c'est lequivalent de view-book-page</li>
+      <li>afficher le booking qu'on edite dans le form</li>
+      <li>Gérer la sauvegarde avec le add</li>
+    </ul>
+  </li>
   <li>Faire le running / pas running</li>
-  <li>Mettre la stratégie d'update des components à onPush</li>
+  <li>Mettre la stratégie d'update des components à onPush (il y en a dans l'exemple ngrx)</li>
   <li>Faire la suppression de timer</li>
-  <li>Voir comment ils font la répartition components / containers (dumb container, smart component ?)</li>
 </ul>
