--- a/src/app/timers/components/edit/edit.component.html
+++ b/src/app/timers/components/edit/edit.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="timerForm" novalidate>
+<form [formGroup]="timerForm" novalidate (ngSubmit)="onSubmit()">
   <section class="form-block">
     <label>Input Fields</label>
     <div class="form-group">
