feat: finish update of timer

--- a/src/app/timers/containers/list/list-page.component.html
+++ b/src/app/timers/containers/list/list-page.component.html
@@ -29,4 +29,5 @@
   <li>Faire le running / pas running</li>
   <li>Mettre la stratégie d'update des components à onPush (il y en a dans l'exemple ngrx)</li>
   <li>Faire la suppression de timer</li>
+  <li>Guard pour s'assurer qu'on ait bien le timer loadé quand on fait /edit/:id / https://toddmotto.com/preloading-ngrx-store-route-guards</li>
 </ul>
