feat: add timer using same form as edit

--- a/src/app/timers/components/edit/edit.component.html
+++ b/src/app/timers/components/edit/edit.component.html
@@ -10,6 +10,7 @@
       <input type="text" id="timer-color" placeholder="#f00" size="20" required formControlName="color">
     </div>
 
+    <button class="btn" (click)="onCancel()">Cancel</button>
     <button type="submit" class="btn btn-primary">Save</button>
   </section>
 </form>
