--- a/src/app/core/containers/app/app.component.html
+++ b/src/app/core/containers/app/app.component.html
@@ -1,5 +1,5 @@
 <clr-main-container>
-  <!-- <clr-header class="header header-6">
+  <clr-header class="header header-6">
     <div class="branding">
       <a class="nav-link" href="javascript://">
         <clr-icon shape="clock" class="is-inverse"></clr-icon>
@@ -18,7 +18,7 @@
         Log in
       </a>
     </div>
-  </clr-header>-->
+  </clr-header>
   <div class="content-container">
     <div class="content-area">
 
